--- a/homepage/S/s.css
+++ b/homepage/S/s.css
@@ -13,10 +13,14 @@ h1{
 a{
     color: #f6f7eb;
     text-decoration: none;
+    transition: color 0.1s;
+    transition: margin-left 0.5s;
 }
 
 a:hover{
     text-decoration: underline;
+    color: gray;
+    margin-left: 5px;
 }
 
 #oc{
