--- a/homepage/S/s.css
+++ b/homepage/S/s.css
@@ -2,8 +2,8 @@ body{
     background-color: #272838;
     color: #cbd4c2;
     max-width: 70ch;
-    padding: 1em;
-    margin: auto;
+    padding: 5em;
+    margin: left;
 }
 
 h1{
